--- a/frontend/src/Page/Layout/layout.scss
+++ b/frontend/src/Page/Layout/layout.scss
@@ -17,6 +17,24 @@
         padding: 5px;
         display: flex;
         flex-wrap: wrap;
+
+        // flex-wrap won't trigger without inline-block 
+        li {
+            //display: inline-block;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+
+        .save-edit-wrapper {
+
+            display: flex;
+            flex-wrap: wrap;
+            gap: 5px;
+            //justify-content: center;
+            //align-items: center;
+        }
     }
 
     &_header {
@@ -40,12 +58,14 @@
             li {
                 display: flex;
                 align-items: center;
+                gap: 5px;
 
                 a {
                     width: 100%;
                     text-decoration: none;
                     color: $text-color;
                     padding: 10px;
+                    margin-right: 5px;
 
                     &:hover {
                         background-color: $hover;
